--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -7,3 +7,5 @@ jobs:
     steps:
       - name: List all Defaults EV
         run: printenv
+      - name: Access Event Name
+        run: $GITHUB_EVENT_NAME
