--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -8,4 +8,4 @@ jobs:
       - name: List all Defaults EV
         run: printenv
       - name: Access Event Name
-        run: ${{ github.event_name }}
+        run: echo "The Event that triggered this workflow ${{ github.event_name }}"
