--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -9,3 +9,4 @@ jobs:
         run: printenv
       - name: Access Event Name
         run: echo "The Event that triggered this workflow ${{ github.event_name }}"
+        run: echo "Name of the Branch ${{ github.ref_name }}"
